--- a/style.css
+++ b/style.css
@@ -6,17 +6,55 @@
 }
 
 body {
-  display: grid;
   height: 100vh;
-  place-items: center;
-  background: #2b2b2b;
 }
 
+/* LIGHT/DARK MODE */
 .checkbox {
-  height: 160px;
-  width: 320px;
+  height: 30px;
+  width: 60px;
   background: #222;
   appearance: none;
-  border-radius: 160px;
-  box-shadow: inset 0 8px 60px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  box-shadow: inset 0 4px 20px rgba(0, 0, 0, 0.1),
+    inset 0 4px 4px rgba(0, 0, 0, 0.1), inset 0 -2px 2px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.checkbox::before {
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  background: linear-gradient(to bottom, #444, #222);
+  border-radius: 50%;
+  transform: scale(0.9);
+  transition: 0.5s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3),
+    inset 2px 2px rgba(255, 255, 255, 0.2),
+    inset -2px -2px rgba(255, 255, 255, 0.2);
+}
+
+.checkbox:checked {
+  background: #fff;
+  box-shadow: inset 0 2px 20px rgba(0, 0, 0, 0.1),
+    inset 0 2px 4px rgba(0, 0, 0, 0.1), inset 0 -2px 2px rgba(0, 0, 0, 0.05);
+}
+
+.checkbox:checked::before {
+  left: 30px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1),
+    inset 2px 2px rgba(255, 255, 255, 1), inset -2px -2px rgba(255, 255, 255, 1);
+  background: linear-gradient(to bottom, #eaeaea, #ccc);
+}
+
+.checkbox::after {
+  content: none;
 }
