--- a/style.css
+++ b/style.css
@@ -33,13 +33,13 @@ body {
   top: 0;
   left: 0;
   content: "";
-  background: linear-gradient(to bottom, #444, #222);
+  background: #f1c40f;
   border-radius: 50%;
   transform: scale(0.9);
   transition: 0.5s;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3),
-    inset 2px 2px rgba(255, 255, 255, 0.2),
-    inset -2px -2px rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 15px #f1c40f, 0 0 30px #f39c12,
+    inset 2px 2px rgba(255, 255, 255, 0.8),
+    inset -2px -2px rgba(255, 255, 255, 0.5);
 }
 
 .checkbox:checked {
@@ -50,9 +50,15 @@ body {
 
 .checkbox:checked::before {
   left: 30px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1),
-    inset 2px 2px rgba(255, 255, 255, 1), inset -2px -2px rgba(255, 255, 255, 1);
-  background: linear-gradient(to bottom, #eaeaea, #ccc);
+  background: #f1c40f;
+  box-shadow: 0 0 15px #f1c40f, 0 0 30px #f39c12,
+    inset 2px 2px rgba(255, 255, 255, 0.8),
+    inset -2px -2px rgba(255, 255, 255, 0.5);
+}
+
+.checkbox:not(:checked)::before {
+  background: #222;
+  box-shadow: inset -10px 0 0 0 #ffffff;
 }
 
 .checkbox::after {
