--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body {
-  height: 100vh;
+body,
+html {
+  height: 100%;
+  background-color: #eaecf0;
 }
 
 /* LIGHT/DARK MODE TOGGLE */
@@ -56,4 +58,61 @@ body {
 
 .checkbox::after {
   content: none;
+}
+
+/* Dashboard */
+a {
+  text-decoration: none;
+  color: #eaecf0;
+}
+
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+aside {
+  width: 300px;
+  background-color: #0f1222;
+  display: flex;
+  flex-direction: column;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+.webaristo-logo {
+  width: 100px;
+  height: 100px;
+  margin-top: 20px;
+}
+
+.menu {
+  margin-top: 20px;
+}
+
+.menu div {
+  display: flex;
+  align-items: center;
+  transition: background-color 0.3s;
+  padding: 1rem 1.5rem;
+  border-radius: 8px;
+  margin: 5px 10px 0 10px;
+}
+
+.menu div img {
+  width: 24px;
+  height: 24px;
+  margin-right: 12px;
+}
+
+.menu div h4 {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.menu div:hover {
+  background-color: #0062ff;
 }
